enam in common, KafkaConfig to config, fix controller, fix test